@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-14T08:26:34Z",
+  "timestamp" : "2022-11-14T16:27:26Z",
   "count_outdated" : 2599,
   "uniques_outdated" : 698,
-  "count" : 2621,
+  "count" : 2620,
   "uniques" : 708,
   "clones" : [
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
