@@ -1,10 +1,10 @@
 {
-  "count": 22,
+  "count": 21,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
