@@ -1,3 +1,11 @@
+2022-11-14T16:27:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3463307642 # 1028
+* notice: last 14d: unq all: 6 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 698 2599 / 708 2621
+* notice: next accum: outdated-unq outdated-all / unq all: 698 2599 / 708 2620
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-31]
+
 2022-11-14T08:26:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3459711746 # 1027
 * notice: last 14d: unq all: 6 22
